# worker-patterns

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  browser-routing.md  cli.md  configuration.md  dev-logging.md  elastic-worker-lanes.md  hermes-integration.md  install-skill.md  mcp.md  module-swarm-hardening.md  runtime-adapters.md  worker-patterns.md
docs/plans/: 2026-05-05-runtime-neutral-readiness.md
examples/: execution-plan.json  selection.json
policies/: pattern_rules.yaml  worker_profiles.yaml
scripts/: smoke_hermes_temp_home_mcp.sh  smoke_install.sh
skills/hermes-worker-patterns/: SKILL.md
skills/worker-patterns/: SKILL.md
src/hermes_worker_patterns/: __init__.py  adapter.py  cli.py  execution_plan.py  hermes_tool.py  mcp_server.py  policy.py  profile_policy.py  prompt_renderer.py  schemas.py  selector.py  trace.py
src/worker_patterns/: __init__.py  adapter.py  cli.py  doctor.py  execution_plan.py  hermes_tool.py  mcp_server.py  policy.py  profile_policy.py  prompt_renderer.py  runtime_tool.py  schemas.py  selector.py  setup.py  trace.py
tests/: test_ci_workflow.py  test_cli.py  test_compatibility_shim.py  test_dev_trace.py  test_execution_plan.py  test_golden_routing_cases.py  test_hermes_temp_home_smoke_script.py  test_hermes_tool.py  test_install_smoke_script.py  test_legacy_policy_migration.py  test_mcp_server.py  test_mcp_stdio_smoke.py  test_module_swarm_scale.py  test_profile_policy.py  test_prompt_renderer.py  test_selector.py
tests/fixtures/: golden_routing_cases.yaml  legacy_policy_expected_mappings.yaml  module_swarm_32_lane_case.yaml  pattern_cases.yaml
