[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worker-patterns"
version = "0.1.0"
description = "Dry-run worker-pattern selector and runtime-plan adapter for agentic systems."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Stefan McFeeters" }]
license = "MIT"
keywords = ["mcp", "cli", "agents", "workflow", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "PyYAML>=6",
]

[project.urls]
Homepage = "https://github.com/stefan-mcf/worker-patterns"
Repository = "https://github.com/stefan-mcf/worker-patterns"
Issues = "https://github.com/stefan-mcf/worker-patterns/issues"
Documentation = "https://github.com/stefan-mcf/worker-patterns/tree/main/docs"

[project.scripts]
worker-pattern = "worker_patterns.cli:main"
worker-pattern-mcp = "worker_patterns.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.3",
    "build>=1.2",
    "twine>=5",
    "PyYAML>=6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
worker_patterns = ["policies/*.yaml"]
hermes_worker_patterns = ["policies/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
